{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 11,
  "lineage": "a089dda4-697c-17a7-b851-2f47dafa6d92",
  "resources": [
    {
      "module": "module.qa_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:internet-gateway/igw-086965b215a1c7338",
            "id": "igw-086965b215a1c7338",
            "owner_id": "851725282145",
            "tags": {
              "Name": "qa-vpc-igw"
            },
            "tags_all": {
              "Name": "qa-vpc-igw"
            },
            "vpc_id": "vpc-0c5a5fd614ad80ac7"
          },
          "dependencies": [
            "module.qa_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.qa_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-086965b215a1c7338",
            "id": "r-rtb-0fd3bd143b88d36461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fd3bd143b88d3646",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.qa_vpc.aws_internet_gateway.igw_main",
            "module.qa_vpc.aws_route_table.route_table_public",
            "module.qa_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.qa_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:route-table/rtb-08f31f03b4535657a",
            "id": "rtb-08f31f03b4535657a",
            "owner_id": "851725282145",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "qa-vpc-private-route-table"
            },
            "tags_all": {
              "Name": "qa-vpc-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5a5fd614ad80ac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.qa_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.qa_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:route-table/rtb-0fd3bd143b88d3646",
            "id": "rtb-0fd3bd143b88d3646",
            "owner_id": "851725282145",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "qa-vpc-public-route-table"
            },
            "tags_all": {
              "Name": "qa-vpc-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5a5fd614ad80ac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.qa_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.qa_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008773d084ef73875",
            "route_table_id": "rtb-08f31f03b4535657a",
            "subnet_id": "subnet-0c72e3cb2253b28c3"
          },
          "dependencies": [
            "module.qa_vpc.aws_route_table.route_table_private",
            "module.qa_vpc.aws_subnet.subnet_private",
            "module.qa_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.qa_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0212c6b31416b7f92",
            "route_table_id": "rtb-0fd3bd143b88d3646",
            "subnet_id": "subnet-0b5e00b5fa14fd4a8"
          },
          "dependencies": [
            "module.qa_vpc.aws_route_table.route_table_public",
            "module.qa_vpc.aws_subnet.subnet_public",
            "module.qa_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.qa_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:security-group/sg-0ad44f6510da2e4ee",
            "description": "Allow inbound HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad44f6510da2e4ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "qa-vpc-sg",
            "name_prefix": "",
            "owner_id": "851725282145",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c5a5fd614ad80ac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.qa_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.qa_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:subnet/subnet-0c72e3cb2253b28c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c72e3cb2253b28c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725282145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "qa-vpc-private-subnet"
            },
            "tags_all": {
              "Name": "qa-vpc-private-subnet"
            },
            "vpc_id": "vpc-0c5a5fd614ad80ac7"
          },
          "dependencies": [
            "module.qa_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.qa_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:subnet/subnet-0b5e00b5fa14fd4a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5e00b5fa14fd4a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725282145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "qa-vpc-public-subnet"
            },
            "tags_all": {
              "Name": "qa-vpc-public-subnet"
            },
            "vpc_id": "vpc-0c5a5fd614ad80ac7"
          },
          "dependencies": [
            "module.qa_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.qa_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:vpc/vpc-0c5a5fd614ad80ac7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-03172c25af06ab3cc",
            "default_route_table_id": "rtb-0fe821d6a1c8f75a4",
            "default_security_group_id": "sg-02af74589143b927f",
            "dhcp_options_id": "dopt-067ffb70001ab9bb6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c5a5fd614ad80ac7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fe821d6a1c8f75a4",
            "owner_id": "851725282145",
            "tags": {
              "Name": "qa-vpc"
            },
            "tags_all": {
              "Name": "qa-vpc"
            }
          }
        }
      ]
    }
  ]
}